[gd_scene load_steps=23 format=2]

[ext_resource path="res://pixel-emulator-font/PixelEmulator-xq08.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Game_Assets/SettingsButton.png" type="Texture" id=2]
[ext_resource path="res://Scripts/UI.gd" type="Script" id=3]
[ext_resource path="res://Assets/Game_Assets/Play Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Game_Assets/BackButton.png" type="Texture" id=5]
[ext_resource path="res://Assets/Game_Assets/RestartButton (1).png" type="Texture" id=6]
[ext_resource path="res://Assets/Game_Assets/WishUI/ShieldWish.png" type="Texture" id=7]
[ext_resource path="res://Assets/Game_Assets/WishUI/ExtraPlanetWish.png" type="Texture" id=8]
[ext_resource path="res://Assets/Game_Assets/WishUI/x2Wish.png" type="Texture" id=9]
[ext_resource path="res://Assets/Game_Assets/SunMeter/0.png" type="Texture" id=10]
[ext_resource path="res://Assets/black_color.png" type="Texture" id=13]
[ext_resource path="res://Assets/Game_Assets/SunMeter/Heat-gauge-flames.png" type="Texture" id=27]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0.376471, 0.376471, 0.439216, 1 )
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 0, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 128, 128, 128, 128 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 27 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 1 )

[node name="UI" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 3 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.022
anchor_top = 0.033
anchor_right = 0.022
anchor_bottom = 0.033
margin_left = 9.472
margin_top = -11.008
margin_right = 253.472
margin_bottom = 36.992
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_shadow = Color( 0.376471, 0.376471, 0.439216, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "Numbers"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SunMeterBar" type="Control" parent="."]
margin_left = 0.749146
margin_top = 38.2068
margin_right = 40.7491
margin_bottom = 78.2068
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SunMeter" type="TextureRect" parent="SunMeterBar"]
anchor_left = 0.911
anchor_top = 0.366
anchor_right = 0.911
anchor_bottom = 0.366
margin_left = 874.2
margin_top = 143.792
margin_right = 1002.2
margin_bottom = 399.792
rect_scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PowerUpDisplay" type="TextureRect" parent="SunMeterBar"]
anchor_top = 0.838
anchor_bottom = 0.838
margin_left = 39.2509
margin_top = 16.2732
margin_right = 79.2509
margin_bottom = 56.2732
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteFadeTimer" type="Timer" parent="SunMeterBar"]
wait_time = 8.0
one_shot = true

[node name="FlameAnimation" type="AnimatedSprite" parent="SunMeterBar"]
position = Vector2( 960.587, 248.731 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 7 )
frame = 4

[node name="Blur" type="TextureRect" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.639216 )
margin_left = -870.316
margin_top = -774.207
margin_right = -838.316
margin_bottom = -742.207
rect_scale = Vector2( 80, 80 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -100.0
margin_right = 64.0
margin_bottom = 100.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="TextureButton" parent="Button"]
margin_top = 22.0
margin_right = 128.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="Button/Continue"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 8 )
text = "Continue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="Button"]
margin_top = 75.0
margin_right = 128.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Button/Restart"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 98, 40 )
custom_fonts/font = SubResource( 8 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="TextureButton" parent="Button"]
margin_top = 128.0
margin_right = 128.0
margin_bottom = 177.0
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 5 )

[node name="Label" type="Label" parent="Button/MainMenu"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 98, 40 )
custom_fonts/font = SubResource( 8 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseButton" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -125.773
margin_top = -1.15256
margin_right = 2.22729
margin_bottom = 62.8475
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over_Restart" type="TextureButton" parent="."]
visible = false
anchor_left = 0.151
anchor_top = 0.5
anchor_right = 0.151
anchor_bottom = 0.5
margin_top = -24.5
margin_right = 128.0
margin_bottom = 24.5
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game_Over_Restart"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 98, 40 )
custom_fonts/font = SubResource( 8 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over_MainMenu" type="TextureButton" parent="."]
visible = false
anchor_left = 0.849
anchor_top = 0.5
anchor_right = 0.849
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -24.5
margin_bottom = 24.5
rect_min_size = Vector2( 0, 40 )
texture_normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Game_Over_MainMenu"]
visible = false
margin_right = 40.0
margin_bottom = 14.0
rect_min_size = Vector2( 98, 40 )
custom_fonts/font = SubResource( 8 )
text = "Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_Over_Label" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -145.5
margin_right = 512.0
margin_bottom = 145.5
custom_fonts/font = SubResource( 9 )
custom_colors/font_color_shadow = Color( 0.376471, 0.376471, 0.439216, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "GAME OVER





"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WishingStar" type="HBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = -24.5
margin_right = 89.5
margin_bottom = 24.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExtraPlanetWish" type="TextureButton" parent="WishingStar"]
margin_right = 57.0
margin_bottom = 49.0
texture_normal = ExtResource( 8 )

[node name="ShieldWish" type="TextureButton" parent="WishingStar"]
margin_left = 61.0
margin_right = 118.0
margin_bottom = 49.0
texture_normal = ExtResource( 7 )

[node name="DoublePointsWish" type="TextureButton" parent="WishingStar"]
margin_left = 122.0
margin_right = 179.0
margin_bottom = 49.0
texture_normal = ExtResource( 9 )

[node name="FinalScore" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.5
margin_top = 100.0
margin_right = 92.5
margin_bottom = 28.5
custom_fonts/font = SubResource( 10 )
text = "Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="SunMeterBar/SpriteFadeTimer" to="." method="_on_SpriteFadeTimer_timeout"]
[connection signal="pressed" from="Button/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Button/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Button/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_PauseButton_pressed"]
[connection signal="pressed" from="Game_Over_Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Game_Over_MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="WishingStar/ExtraPlanetWish" to="." method="_on_ExtraPlanetWish_pressed"]
[connection signal="pressed" from="WishingStar/ShieldWish" to="." method="_on_ShieldWish_pressed"]
[connection signal="pressed" from="WishingStar/DoublePointsWish" to="." method="_on_DoublePointsWish_pressed"]
